--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-date-pickers": "^8.10.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.85.3",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "antd": "^5.26.6",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
